[package]
name = "bench-get-confirmed-blocks-with-data"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-storage-bigtable = { path = "../storage-bigtable", version = "=1.10.4" }
solana-transaction-status = { path = "../transaction-status", version = "=1.10.4" }
solana-sdk = { path = "../sdk", version = "=1.10.4" }
tokio = { version = "1", features = ["full"] }
serde = "1.0.130"
prost = "0.9.0"
rand = "0.8.5"