[package]
name = "bench-get-confirmed-blocks-with-data"
version = "0.1.0"
edition = "2021"

[dependencies]
core_affinity = "0.5.10"
crossbeam = "0.8.1"
env_logger = "0.9.0"
log = "0.4.17"
solana-storage-bigtable = { path = "../storage-bigtable", version = "=1.11.0" }
solana-transaction-status = { path = "../transaction-status", version = "=1.11.0" }
solana-sdk = { path = "../sdk", version = "=1.11.0" }
tokio = { version = "1", features = ["full"] }
serde = "1.0.130"
prost = "0.9.0"
rand = "0.8.5"